src/snapshots/vm__parser__test__parse_numbers-2.snap
---
source: src/parser.rs
expression: "number(\"123.123\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 7,
            line: 1,
            fragment: "",
            extra: (),
        },
        Float(
            123.123,
        ),
    ),
)
