src/snapshots/vm__parser__test__parse_numbers.snap
---
source: src/parser.rs
expression: "number_expr(\"123\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 3,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: Literal(
                Int(
                    123,
                ),
            ),
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "123",
                extra: (),
            },
        },
    ),
)
