src/snapshots/vm__parser__test__parse_post_operators-8.snap
---
source: src/parser.rs
expression: "expr(\"a[0]\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 4,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: AccessKey {
                source: Ast {
                    node: Ident(
                        u!("a"),
                    ),
                    span: LocatedSpan {
                        offset: 0,
                        line: 1,
                        fragment: "a",
                        extra: (),
                    },
                },
                key: Ast {
                    node: Literal(
                        Int(
                            0,
                        ),
                    ),
                    span: LocatedSpan {
                        offset: 2,
                        line: 1,
                        fragment: "0",
                        extra: (),
                    },
                },
            },
            span: LocatedSpan {
                offset: 1,
                line: 1,
                fragment: "[0]",
                extra: (),
            },
        },
    ),
)
