src/snapshots/vm__parser__test__parse_return-2.snap
---
source: src/parser.rs
expression: "return_statement(\"return a\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 8,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: Return(
                Some(
                    Ast {
                        node: Ident(
                            u!("a"),
                        ),
                        span: LocatedSpan {
                            offset: 7,
                            line: 1,
                            fragment: "a",
                            extra: (),
                        },
                    },
                ),
            ),
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "return a",
                extra: (),
            },
        },
    ),
)
