src/snapshots/vm__parser__test__parse_unary_operations-4.snap
---
source: src/parser.rs
expression: "unary_operation_expr(\"+a\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 2,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: UnaryOp(
                Positive,
                Ast {
                    node: Ident(
                        u!("a"),
                    ),
                    span: LocatedSpan {
                        offset: 1,
                        line: 1,
                        fragment: "a",
                        extra: (),
                    },
                },
            ),
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "+a",
                extra: (),
            },
        },
    ),
)
