src/snapshots/vm__parser__test__parse_unary_operations.snap
---
source: src/parser.rs
expression: "unary_operation_expr(\"!a\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 2,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: UnaryOp(
                LogicalNot,
                Ast {
                    node: Ident(
                        Ident(
                            "a",
                        ),
                    ),
                    span: LocatedSpan {
                        offset: 1,
                        line: 1,
                        fragment: "a",
                        extra: (),
                    },
                },
            ),
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "!a",
                extra: (),
            },
        },
    ),
)
